# Accounting-Software

./: .env.example  .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 485eec000a56_coa_is_active_and_is_system_changes.py  6a1cceed3b63_user_model_modification.py  9d6ad2587c24_chart_of_accounts.py  c81db2741487_parent_and_non_system_group_constraints_.py  e6e19cf6e5d1_create_users_table.py
app/: main.py
app/api/: auth_routes.py  ledger_groups_routes.py  ledger_routes.py  ledger_tree_routes.py  routes.py  user_routes.py
app/api/Ledgers/: ledger_groups_routes.py  ledger_routes.py  ledger_tree_routes.py
app/api/v1/: routes.py
app/auth/: dependencies.py  jwt.py
app/core/: auth.py  config.py  security.py
app/db/: models.py  session.py
app/db/models/: ledger_models.py  user_models.py
app/schemas/: ledger_group_schema.py  ledger_tree_schema.py  user_schema.py
app/schemas/Ledgers/: ledger_schema.py  ledger_tree_schema.py
app/services/: ledger_group_services.py  ledger_service.py  ledger_tree_service.py  user_services.py
app/services/Ledgers/: ledger_group_services.py  ledger_service.py
